--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,9 +1,15 @@
+name: Schedule job
+
 on:
-    schedule:
-        - cron: '*/2 * * * *'
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '*/5 * * * *' 
+
 jobs:
-    hello_world:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Echo current time
-              run: echo "The currect server time is $(date)"
+  hello_world:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo current time
+        run: echo "The current server time is $(date)"
