--- a/.github/workflows/expression-function.yml
+++ b/.github/workflows/expression-function.yml
@@ -26,8 +26,10 @@ jobs:
         
       - name: Convert job context to JSON
         run: echo "Job context in JSON ${{ toJSON(github.job) }}"
+        
 
       - name: Parse JSON string
+        # run: echo "Parsed JSON ${{ fromJSON('{\"hello\":\"world\"}').hello }}"
         run: echo "Parsed JSON ${{ fromJSON('{\"hello\":\"world\"}').hello }}"
 
       - name: Hash files
