--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Myfirst job
-        runs: |
+        run: |
           echo "Myfirst job is success"
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
       - name: MySecound_job
-        runs: |
+        run: |
           echo "If my first is success run only then my secound job will br run"
-          
+
